Jack: Fixed forced text-align middle

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -54,7 +54,9 @@ nav {
 
   width: 100%;
   height: 100vh;
+}
 
+.horizontal-align {
   text-align: center;
 }
 
